--- a/Mongo/Mongo.Blog/Web.config
+++ b/Mongo/Mongo.Blog/Web.config
@@ -23,7 +23,7 @@
     </compilation>
 
     <authentication mode="Forms">
-      <forms loginUrl="~/Account/LogOn" timeout="2880" />
+      <forms loginUrl="~/SignIn" timeout="2880" />
     </authentication>
 
     <pages>
